# Guidrone

./: CMakeLists.txt  README.md  calibration.cpp  calibration.h  ctello.cpp  ctello.h  functions.cpp  functions.h  lanedetection.cpp  lanedetection.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
